--- a/feedback.html
+++ b/feedback.html
@@ -53,21 +53,22 @@
                     <div class="form-group">
                         <label for="name" class="fs-5">Name</label>
                         <input type="text" class="form-control" id="name" autocomplete="name"
-                            placeholder="Please enter your name.">
+                            placeholder="Please enter your name." required>
                     </div>
                     <div class="form-group">
                         <label for="email" class="fs-5">Email</label>
                         <input type="email" class="form-control" id="email" autocomplete="email"
-                            placeholder="yourname@email.com">
+                            placeholder="yourname@email.com" required>
                     </div>
                     <div class="form-group">
                         <label for="topic" class="fs-5">Topic</label>
-                        <input type="text" class="form-control" id="topic" placeholder="Please enter the topic.">
+                        <input type="text" class="form-control" id="topic" placeholder="Please enter the topic." required>
                     </div>
                     <div class="form-group">
                         <label for="message" class="fs-5">Message</label>
                         <textarea class="form-control" id="message" rows="3"
-                            placeholder="Leave your feedback here."></textarea>
+                            placeholder="Leave your feedback here." required>
+                        </textarea>
                     </div>
                     <div class="d-grid">
                         <button type="submit" class="btn btn-primary btn-block">Submit</button>
